--- a/index.html
+++ b/index.html
@@ -3,15 +3,85 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal portfolio webpage for Jason Edelson">
+    <meta name="author" content="Jason Edelson">
     <title>Jason M Edelson</title>
     <link rel="shortcut icon" href="img/favicon.jpg">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+	<link href="http://fonts.googleapis.com/css?family=Oxygen:400,700,300" rel="stylesheet" type="text/css">
+   <link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-  
-  	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  	 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  	<div id="content">
+  		<header>
+  			<div class="container">
+				<div class="row">
+					<div class="col-lg-3 col-md-3 col-sm-10 col-xs-9">
+						<h1 id="logo">Jason Edelson</h1>
+					</div>
+					<div class="col-sm-2 col-xs-3 visible-sm text-right visible-xs">
+						<a href="#" title="nav" class="mini-nav"><i class="fa fa-reorder"></i></a>
+					</div>
+					<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+						<nav id="navigation">
+							<ul class="nav">
+								<li class="active"><a href="#main" title="Home">Home</a></li>
+                     			<li><a href="#home" title="About">About</a></li>
+								<li><a href="#projects" title="Projects">Work</a></li>
+								<li><a href="#skills" title="Skills">Skills</a></li>
+								<li><a href="#contact" title="Contact">Contact</a></li>
+								<li class=""><a href="#links" title="Links">Links</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+  		</header>
+  		<div id="main">
+	 		<div class="container">
+	 			<div class="row">
+					<div class="col-lg-7 col-lg-offset-5 col-md-8 col-md-offset-4 col-sm-10 col-sm-offset-1 col-xs-12">
+						<div class="cont-wrapper">
+							<p class="intro">- Full-Stack Developer - <br> Skills: HTML5, CSS3, JavaScript, SQL, Python, C# and ASP.NET MVC</p>
+							<p class="btn-wrp"><a href="#contact" class="c2a-button">Contact Me</a></p>
+						</div><!-- end cont wrapper -->
+					</div><!-- end 8 -->
+	 			</div>
+	 		</div><!-- end container -->
+		</div>
+		<div id="intro-strip">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+	               		<h2>When you come to a fork in the road, take it.</h2>
+	               		<p>Yogi Berra</p>
+	            	</div>
+				</div><!-- end row -->
+			</div><!-- end container -->
+		</div>
+		<div id="home">
+			<div class="container">
+			<div class="row">
+				<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12  text anim">
+					<h2>A little about me</h2>
+					<p>After spending the first 18 years of life in the California Bay Area I moved down coast to beautiful San Diego. While attending San Diego State University and studying finance I fell in love with the city but also discovered that this definitely was not what I wanted to be doing for the next 40 years of life. So I decided to make the career change and pursue Software and Web Development by attending The Tech Academy's remote Software Development program. <br> Current favorite language is Python but am experienced and compfortable with C, C#, SQL, HTML, CSS & JS among others</p>
+					<p><strong>Highly detail oriented, exceptionally organized, fun to work with!</strong></p>
+					<p class="btn-wrp"><a href="#contact" class="c2a-button">Get in Touch</a></p>
+				</div>
+				<div class="col-lg-5 col-md-5 col-sm-5 ipad hidden-xs anim">
+					<div class="image-holder cover-image img-fluid"></div>
+				</div>
 
+			</div><!-- end row -->
+			</div><!-- end container -->
+		</div>
+  	</div>
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  	<script src="js/main.js"></script>
   </body>
 </html>
